[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vecgrid"
version = "0.0.2"
description = "Distributed embedded vector database — like Hazelcast, but for vector search. Python-native."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "VecGrid Contributors" },
]
keywords = [
    "vector-database",
    "distributed",
    "embedded",
    "hnsw",
    "approximate-nearest-neighbor",
    "in-memory",
    "data-grid",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
fast = [
    "hnswlib>=0.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "hnswlib>=0.7.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Arveti/VecGrid"
Documentation = "https://github.com/Arveti/VecGrid#readme"
Repository = "https://github.com/Arveti/VecGrid"
Issues = "https://github.com/Arveti/VecGrid/issues"

[tool.hatch.build.targets.wheel]
packages = ["vecgrid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
